--- a/fr1ckets/src/fr1ckets/templates/tickets_vanilla.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets_vanilla.html
@@ -517,6 +517,8 @@
         <!-- vim: set sw=2 ts=2: -->
     </div><!-- container-->
     <!-- eff your french article meme -->
+		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+		<script src="eruda.init();"</script>
     <script src="/static/js/vanilla.js"></script>
     <script src="/static/js/ext/moment.js"></script>
     {% if page_opts and page_opts['charting'] %}
