tryouts for mobile probs

--- a/fr1ckets/src/fr1ckets/templates/tickets_vanilla.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets_vanilla.html
@@ -518,7 +518,7 @@
     </div><!-- container-->
     <!-- eff your french article meme -->
 		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
-		<script src="eruda.init();"</script>
+		<script>eruda.init();</script>
     <script src="/static/js/vanilla.js"></script>
     <script src="/static/js/ext/moment.js"></script>
     {% if page_opts and page_opts['charting'] %}
