--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -100,7 +100,8 @@
                             <option value="2">2</option>
                         </select>
                         <p class="fieldlegend">We voorzien een plaatsje voor je camper of caravan op de daarvoor
-                            voorziene parking op het grote event-plein. Stroom en wifi inbegrepen.</p>
+                            voorziene parking op het grote event-plein, stroom en wifi inbegrepen. Niet nodig voor
+                            een gewone tent!</p>
                     </div>
                     <div class="fieldwrapper">
                         <label for="hotel_spot">Hostelkamer - €160</label>
@@ -109,8 +110,9 @@
                             <option value="1">1</option>
                             <option value="2">2</option>
                         </select>
-                        <p class="fieldlegend">We hebben enkele kamers in het hostel beschikbaar. We kunnen niet
-                            garanderen dat iedereen een plekje kan krijgen; desgevallend betalen we dit terug.</p>
+                        <p class="fieldlegend">We hebben enkele slaapkamers in het hostel beschikbaar. Meestal hebben
+                            ze 6 à 8 plaatsen. We kunnen niet garanderen dat iedereen een plekje kan krijgen,
+                            desgevallend betalen we dit terug.</p>
                     </div>
                     <div class="fieldwrapper">
                         <label for="room_spot">Bed in gedeelde kamer - €30</label>
@@ -133,11 +135,11 @@
                 <div class="col">
                     <ul>
                         <li>Toegang tot Fri3d Camp 2022 van vrijdag 12 augustus tot en met zondag 14 augustus. Elk
-                            ticket bevat twee warme maaltijden, een plaats voor je tent.</li>
+                            ticket bevat twee warme maaltijden en een plaatsje voor je tent dichtbij wifi en electriciteit.</li>
                         <li><strong>Elke kampganger heeft een ticket nodig.</strong></li>
                         <li>We hopen dat iedereen ouder dan 16 ter plekke even mee helpt met het kamp (enkele uren
                             tappen, de infobalie bemannen, etc).</li>
-                        <li>Wil je niet mee helpen aan het kamp, vink dan de optie <em>premium</em> aan. Je ticket wordt
+                        <li>Zie je het niet zitten een shift mee te helpen, vink dan de optie <em>premium</em> aan. Je ticket wordt
                             dan wel duurder.</li>
                         <li>Selecteer het aantal tickets om de per-ticket opties te zien.</li>
                     </ul>
@@ -199,7 +201,7 @@
                     <div class="fieldwrapper fieldwrapper-checkbox">
                         <input type="checkbox" id="tickets_CNT_options_volunteers_before"
                             name="tickets_CNT_options_volunteers_before" class="field field-checkbox">
-                        <label for="tickets_CNT_options_volunteers_before">Helpt mee opbouwen voor het kamp</label>
+                        <label for="tickets_CNT_options_volunteers_before">Helpt graag opbouwen de dagen voor het kamp (we contacteren je nog).</label>
                     </div>
                     <div class="fieldwrapper fieldwrapper-checkbox">
                         <input type="checkbox" id="tickets_CNT_options_not_volunteering_during"
@@ -210,7 +212,7 @@
                     <div class="fieldwrapper fieldwrapper-checkbox">
                         <input type="checkbox" id="tickets_CNT_options_volunteers_after"
                             name="tickets_CNT_options_volunteers_after" class="field field-checkbox">
-                        <label for="tickets_CNT_options_volunteers_after">Helpt mee afbreken na het kamp</label>
+                        <label for="tickets_CNT_options_volunteers_after">Helpt graag afbreken de dagen na het kamp (we contacteren je nog).</label>
                     </div>
                 </template>
                 <template id="template_participant_meta_is_billable">
