--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -341,8 +341,8 @@
 
             <div class="pagesection block block-narrow">
                 <h2>Tokens voor consumpties</h2>
-                <p>Je betaalt € 1.80 per token. De meeste drankjes kosten één token. Tijdens het kamp kan je natuurlijk ook
-                tokens kopen, maar door ze hier mee te bestellen, liggen ze voor je klaar wanneer je toekomt.</p>
+                <p>Je betaalt € 1.80 per token. Alle drankjes en de meeste snacks kosten één token. Tijdens het kamp kan je
+                natuurlijk ook tokens kopen, maar door ze hier mee te bestellen, liggen ze voor je klaar wanneer je toekomt.</p>
                 <div class="fieldwrapper">
                     <label for="token">Aantal tokens</label>
                     <select id="token" name="token" class="field field-select fri3d-product">
