--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -29,7 +29,7 @@
         </a>
     </header>
     <div class="notice notice-warning block-narrow" id="js_warning">
-        <p>Deze pagina vereist Javascript! Gelieve Javascript op te zetten voor deze site.</p>
+        <p>Deze pagina vereist Javascript! Gelieve Javascript op te zetten voor deze site. Ingeval ethische bezwaren geen probleem, tickets@fri3d.be kan je manueel verderhelpen.</p>
     </div>
     <div class="sitebody hidden" id="js_container">
 
