--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -159,7 +159,7 @@
                     </article>
                 </template>
                 <template id="template_participant_meta_is_not_human">
-                    <div class="notice notice-error">Ongeldige datum!</div>
+                    <div class="notice notice-error">Gegevens nog niet compleet.</div>
                 </template>
                 <template id="template_participant_meta_food">
                     <div class="fieldwrapper fieldwrapper-checkbox">
