--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -112,6 +112,7 @@
                             tappen, de infobalie bemannen, etc).</li>
                         <li>Zie je het niet zitten een shift mee te helpen, vink dan de optie <em>premium</em> aan. Je ticket wordt
                             dan wel duurder.</li>
+                        <li>Heb je vragen over privacy? Hier is onze <a href="https://fri3d.be/privacy/">privacyverklaring</a>.</li>
                         <li>Selecteer het aantal tickets om de per-ticket opties te zien.</li>
                     </ul>
                 </div>
