let admins see reports too

--- a/fr1ckets/src/fr1ckets/templates/index.html
+++ b/fr1ckets/src/fr1ckets/templates/index.html
@@ -4,4 +4,7 @@
 <li><a href="/admin/payments">Payments page</a>, voor ons, markeren van betalingen, removen van laattijdige betalingen.
 <li><a href="/admin/vouchers">Vouchers page</a>, voor ons, beheren van de vouchers.
 <li><a href="/admin/reservations">Reservations page</a>, voor ons, beheren van de reservaties.
+<li>Reports:<ul>
+	<li><a href="/reports/products">Products sold</a>.</li>
+</ul></li>
 </ul>
