--- a/fr1ckets/src/fr1ckets/static/daemons/css/index.css
+++ b/fr1ckets/src/fr1ckets/static/daemons/css/index.css
@@ -6,10 +6,26 @@ section#times {
 	margin-top: 2rem;
 }
 
+.devnotes {
+	display: block;
+	border: 3px dashed red;
+	text: red;
+	background: pink;
+}
+
+/*
+            _     _         _
+  __ _ _ __(_) __| | __   _(_) _____      __
+ / _` | '__| |/ _` | \ \ / / |/ _ \ \ /\ / /
+| (_| | |  | | (_| |  \ V /| |  __/\ V  V /
+ \__, |_|  |_|\__,_|   \_/ |_|\___| \_/\_/
+ |___/
+
+*/
 div.day {
 	width: 100%;
-	border: dotted black 2px;
-	margin-top: 1rem;
+	/*border: dotted black 2px;*/
+	margin-top: 0;
 }
 div.ruler-lane {
 	display: inline-block;
@@ -34,6 +50,7 @@ div.tick {
 
 div.track-lane {
 	width : 150px;
+	margin-left: 8px;
 	display: inline-block;
 	vertical-align: top;
 }
@@ -51,19 +68,32 @@ div.track-break {
 }
 div.event {
 	width: 150px;
+	margin-left: 10px;
+	margin-right: 10px;
 	position: absolute;
 	border: solid gray 1px;
 	font-size: small;
 	overflow: hidden;
+	background: lightblue;
 }
 
-.devnotes {
-	display: block;
-	border: 3px dashed red;
-	text: red;
-	background: pink;
+.grid_entry_group_timing {
+	grid-column: 1;
+	grid-row : 1;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	background: yellow;
 }
+/*
+ _ _     _           _
+| (_)___| |_  __   _(_) _____      __
+| | / __| __| \ \ / / |/ _ \ \ /\ / /
+| | \__ \ |_   \ V /| |  __/\ V  V / 
+|_|_|___/\__|   \_/ |_|\___| \_/\_/  
 
+*/
 .list_day {
 	width: 100%;
 	margin-top: 2em;
@@ -74,18 +104,16 @@ div.event {
 	text-align: center;
 	padding: 1em;
 }
-
 .list_day_content {
 	display: flex;
 	flex-direction: column;
 }
-
-.list_day_entry {
+.list_entry {
 	border-top: 1px dotted black;
 	display: grid;
 	grid-template-columns: 15% 85%;
 }
-.list_day_entry_group_timing {
+.list_entry_group_timing {
 	grid-column: 1;
 	grid-row: 1;
 	display: flex;
@@ -94,10 +122,13 @@ div.event {
 	align-items: center;
 	background: yellow;
 }
-.list_day_entry_group_meta {
+.list_entry_group_meta {
 	grid-column: 2;
 	grid-row: 1;
 }
-.list_day_entry_time {
+.list_entry_time {
+	font-size: larger;
+}
+.list_entry .people_needed {
 	font-size: larger;
 }
